--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li>Youliang Yuan, Wenxiang Jiao, Wenxuan Wang, Jen-tse Huang, Jiahao Xu, Tian Liang, Pinjia He, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2407.09121"><font color="#0080FF">Refuse Whenever You Feel Unsafe: Improving Safety in LLMs via Decoupled Refusal Training</font></a>. <i>Preprint</i>. <a href="https://x.com/youliang_yuan/status/1812665889852121332">X</a></li>
 
     <li>Wenxiang Jiao, Wenxuan Wang, Jen-tse Huang, Xing Wang, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2301.08745"><font color="#0080FF">Is ChatGPT A Good Translator? Yes With GPT-4 As The Engine</font></a>. <i>Preprint</i>.</li>
-    <li>Chenyang Lyu, Minghao Wu, Longyue Wang, Xinting Huang, Bingshuai Liu, Zefeng Du, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2306.09093"><font color="#0080FF">Macaw-LLM: Multi-Modal Language Modeling with Image, Audio, Video, and Text Integration</font></a>. <i>Preprint</i>.</li>
+    <li>Chenyang Lyu, Minghao Wu, Longyue Wang, Xinting Huang, Bingshuai Liu, Zefeng Du, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2306.09093"><font color="#0080FF">Macaw-LLM: Multi-Modal Language Modeling with Image, Audio, Video, and Text Integration</font></a>. <i>Preprint</i>. [<a href="https://github.com/lyuchenyang/Macaw-LLM">Project</a>]</li>
 
 
 <h3>2025</h3>
