--- a/index.html
+++ b/index.html
@@ -72,17 +72,6 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <p></p>
 
 
-<!-- h2>Selected Talks</h2>
-
-<ul>
-  <li type="circle">07/29/2019: A talk on Tencent Academic and Industrial Conference (TAIC) in ACL2019, which summarizes our recent work in machine translation. [<a href="talks/20190729 Information Transformation.pdf"><font color="#0080FF">slides</font></a>]</li>
-  <li type="circle">07/27/2018: A lecture in CIPS Summer School, which gives a survey of recent progresses on improving NMT models (covering 70 papers). [<a href="talks/20180727_CIPS_Summer_School.pdf"><font color="#0080FF">slides (in Chinese)</font></a>]
-  <li type="circle">01/04/2018: A talk on <i>Adequacy-Oriented NMT</i>, which summarizes our recent papers that were accepted in the last year. [<a href="talks/adequacy-oriented_nmt.pdf"><font color="#0080FF">slides</font></a>] [<a href="https://mp.weixin.qq.com/s/joZnfPtR3vv6LJPsRrY9Jw"><font color="#0080FF">video and textual explication (in Chinese)</font></a>]</li>
-</ul>
-
-<p></p-->
-
-
 <h2>Selected Publications</h2> 
 
 <a href="publications.html">full list</a>
@@ -94,22 +83,40 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
     <li type="circle">Tian Liang, Zhiwei He, Wenxiang Jiao, Xing Wang, Yan Wang, Rui Wang, Yujiu Yang, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2305.19118"><font color="#0080FF">Encouraging Divergent Thinking in Large Language Models through Multi-Agent Debate</font></a>. <i>EMNLP 2024</i>.</li>
     <li type="circle">Jen-tse Huang, Man Ho LAM, Eric John Li, Shujie Ren, Wenxuan Wang, Wenxiang Jiao, <u>Zhaopeng Tu</u>, and Michael Lyu. <a href="https://openreview.net/forum?id=pwRVGRWtGg"><font color="#0080FF">Apathetic or Empathetic? Evaluating LLMs' Emotional Alignments with Humans</font></a>. <i>NeurIPS 2024</i>.</li>
     <li type="circle">Jen-tse Huang, Wenxuan Wang, Eric John Li, Man Ho LAM, Shujie Ren, Youliang Yuan, Wenxiang Jiao, <u>Zhaopeng Tu</u>, and Michael Lyu. <a href="https://openreview.net/forum?id=H3UayAQWoE"><font color="#0080FF">On the Humanity of Conversational AI: Evaluating the Psychological Portrayal of LLMs</font></a>. <i>ICLR 2024</i> (Oral, 1.2%).</li>
-
 </ul>
 
-<h3>Long Reasoning Models</h3>
+
+<h3>Long Reasoning Models (LRMs)</h3>
 <ul>
     <li type="circle">Xingyu Chen, Jiahao Xu, Tian Liang, Zhiwei He, Jianhui Pang, Dian Yu, Linfeng Song, Qiuzhi Liu, Mengfei Zhou, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2412.21187"><font color="#0080FF">Do NOT Think That Much for 2+3=? On the Overthinking of o1-Like LLMs</font></a>. <i>ICML 2025</i>. <a href="https://x.com/tuzhaopeng/status/1873924882012291463">X</a></li>
     <li type="circle">Yue Wang, Qiuzhi Liu, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Linfeng Song, Dian Yu, Juntao Li, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2501.18585"><font color="#0080FF">Thoughts Are All Over the Place: On the Underthinking of o1-Like LLMs</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1885179412163027406">X</a></li>
     <li type="circle">Zicheng Lin, Tian Liang, Jiahao Xu, Qiuzhi Liu, Xing Wang, Ruilin Luo, Chufan Shi, Siheng Li, Yujiu Yang, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2411.19943"><font color="#0080FF">Critical Tokens Matter: Token-Level Contrastive Estimation Enhances LLM's Reasoning Capability</font></a>. <i>ICML 2025</i>. <a href="https://x.com/tuzhaopeng/status/1879065390992753149">X</a></li>
     <li type="circle">Ante Wang, Linfeng Song, Ye Tian, Dian Yu, Haitao Mi, Xiangyu Duan, <u>Zhaopeng Tu</u>*, Jinsong Su, and Dong Yu. <a href="https://arxiv.org/abs/2502.11183"><font color="#0080FF">Don't Get Lost in the Trees: Streamlining LLM Reasoning by Overcoming Tree Search Exploration Pitfalls</font></a>. <i>ACL 2025</i>. <a href="https://x.com/tuzhaopeng/status/1891346931433255300">X</a></li>
+
+    <li type="circle">Xiaoyuan Liu, Tian Liang, Zhiwei He, Jiahao Xu, Wenxuan Wang, Pinjia He, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2505.13445"><font color="#0080FF">Trust, But Verify: A Self-Verification Approach to Reinforcement Learning with Verifiable Rewards</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1924838749676175617">X</a></li>
+    <li type="circle">Mengru Wang, Xingyu Chen, Yue Wang, Zhiwei He, Jiahao Xu, Tian Liang, Qiuzhi Liu, Yunzhi Yao, Wenxuan Wang, Ruotian Ma, Haitao Mi, Ningyu Zhang, <u>Zhaopeng Tu</u>*, Xiaolong Li, and Dong Yu. <a href="https://arxiv.org/abs/2505.14681"><font color="#0080FF">Two Experts Are All You Need for Steering Thinking: Reinforcing Cognitive Effort in MoE Reasoning Models Without Additional Training</font></a>. <i>Preprint</i>.</li>
+
     <li type="circle">Ke Ji, Jiahao Xu, Tian Liang, Qiuzhi Liu, Zhiwei He, Xingyu Chen, Xiaoyuan Liu, Zhijie Wang, Junying Chen, Benyou Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="http://dx.doi.org/10.13140/RG.2.2.33772.07043"><font color="#0080FF">The First Few Tokens Are All You Need: An Efficient and Effective Unsupervised Prefix Fine-Tuning Method for Reasoning Models</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1895420224683516413">X</a></li>
     <li type="circle">Yansi Li, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Qiuzhi Liu, Rui Wang, Zhuosheng Zhang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2503.17363"><font color="#0080FF">Dancing with Critiques: Enhancing LLM Reasoning with Stepwise Natural Language Self-Critique</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1900823893809791007">X</a></li>	
     <li type="circle">Yi Su, Dian Yu, Linfeng Song, Juntao Li, Haitao Mi, Zhaopeng Tu, Min Zhang, and Dong Yu. <a href="https://arxiv.org/abs/2503.23829"><font color="#0080FF">Crossing the Reward Bridge: Expanding RL with Verifiable Rewards Across Diverse Domains</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1906975869538914570">X</a></li>	
     <li type="circle">Zhiwei He, Tian Liang, Jiahao Xu, Qiuzhi Liu, Xingyu Chen, Yue Wang, Linfeng Song, Dian Yu, Zhenwen Liang, Wenxuan Wang, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2504.11456"><font color="#0080FF">DeepMath-103K: A Large-Scale, Challenging, Decontaminated, and Verifiable Mathematical Dataset for Advancing Reasoning</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1912057561110782446">X</a></li>	
 </ul>
 
-<h3>Large Language Models</h3>
+
+<h3>Multimodal Large Language Models (MLLMs)</h3>
+<ul>
+    <li type="circle">Wenxuan Wang, Xiaoyuan Liu, Kuiyi Gao, Jen-tse Huang, Youliang Yuan, Pinjia He, Shuai Wang, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2502.11184"><font color="#0080FF">Can't See the Forest for the Trees: Benchmarking Multimodal Safety Awareness for Multimodal LLMs</font></a>. <i>ACL 2025</i>.
+    <li type="circle">Xiaoyuan Liu, Wenxuan Wang, Youliang Yuan, Jen-tse Huang, Qiuzhi Liu, Pinjia He, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2410.08145"><font color="#0080FF">Insight Over Sight: Exploring the Vision-Knowledge Conflicts in Multimodal LLMs</font></a>. <i>ACL 2025</i>.
+    <li type="circle">Wenxuan Wang, Kuiyi Gao, Youliang Yuan, Jen-tse Huang, Qiuzhi Liu, Shuai Wang, Wenxiang Jiao, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2410.03869"><font color="#0080FF">Chain-of-Jailbreak Attack for Image Generation Models via Step by Step Editing</font></a>. <i>ACL 2025 (Findings)</i>.
+
+    <li type="circle">Mingxiao Li, Na Su, Fang Qu, Zhizhou Zhong, Ziyang Chen, Yuan Li, <u>Zhaopeng Tu</u>*, and Xiaolong Li. <a href="https://arxiv.org/abs/2505.10917"><font color="#0080FF">VISTA: Enhancing Vision-Text Alignment in MLLMs via Cross-Modal Mutual Information Maximization</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1924483497512800372">X</a></li>
+
+    <li type="circle">Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i>. [<font color="#C4260B"><b>Best Paper Normination</b></font>]</li>
+    <li type="circle">Chenyang Lyu, Minghao Wu, Longyue Wang, Xinting Huang, Bingshuai Liu, Zefeng Du, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2306.09093"><font color="#0080FF">Macaw-LLM: Multi-Modal Language Modeling with Image, Audio, Video, and Text Integration</font></a>. <i>Preprint</i>. [<a href="https://github.com/lyuchenyang/Macaw-LLM">Project</a>]</li>
+</ul>
+
+
+<h3>Large Language Models (LLMs)</h3>
 <ul>	
     <li type="circle">Wenxiang Jiao, Wenxuan Wang, Jen-tse Huang, Xing Wang, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2301.08745"><font color="#0080FF">Is ChatGPT A Good Translator? Yes With GPT-4 As The Engine</font></a>. <i>Preprint</i>.</li>
     <li type="circle">Zhanyu Wang, Longyue Wang, Zhen Zhao, Minghao Wu, Chenyang Lyu, Huayang Li, Deng Cai, Luping Zhou, Shuming Shi, and <u>Zhaopeng Tu</u>. <a href="https://arxiv.org/abs/2311.16511"><font color="#0080FF">GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</font></a>. <i>ACM MM 2024</i>. [<font color="#C4260B"><b>Best Paper Normination</b></font>]</li>
@@ -127,7 +134,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 </ul>
 
 
-<h3>Neural Machine Translation</h3>
+<h3>Neural Machine Translation (NMT)</h3>
 <ul>
     <li type="circle"><u>Zhaopeng Tu</u>, Yang Liu, Shuming Shi, and Tong Zhang. <a href="https://arxiv.org/abs/1711.09367"><font color="#0080FF">Learning to Remember Translation History with a Continuous Cache</font></a>. <i>TACL 2018</i>. </li>
     <li type="circle"><u>Zhaopeng Tu</u>, Yang Liu, Lifeng Shang, Xiaohua Liu, and Hang Li. <a href="https://arxiv.org/abs/1611.01874"><font color="#0080FF">Neural Machine Translation with Reconstruction</font></a>. <i>AAAI 2017</i>. [<a href="https://github.com/tuzhaopeng/NMT">code</a>]</li>
