update EMNLP papers

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <p></p>
 
 <ul>
+  <li type="circle">2025-08: 2 papers were accepted to EMNLP2025.</li>        
   <li type="circle">2025-05: 2 papers were accepted to ICML2025, and 8 papers were accepted to ACL2025.</li>        
   <li type="circle">2025-01: 3 papers were accepted to ICLR2025.</li>        
   <li type="circle">2024-10: Our paper titled "<i>GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</i>" was <font color="#C4260B"><b>nominated for the Best Paper Award</b></font> at ACM MM 2024.</li>        
