--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ table {
     <br/>
     <h2>Zhaopeng Tu</h2>
 
-    <p>Principal Researcher<br />
-    Hunyuan AI Digital Human, Tencent<br />
+    <p>Tech Lead<br />
+    Digital Human Center, Tencent Multimodal Department<br />
     tuzhaopeng@gmail.com</p>
 </td>
 
@@ -49,7 +49,7 @@ table {
 
 
 <h2>Bio</h2>
-<p>Zhaopeng Tu is a principal researcher at Tencent, whose research focuses on large language models.
+<p>Zhaopeng Tu is the Tech Lead of Digital Human Center at Tencent, whose research focuses on agents and large language models.
 He has published over 100 papers in leading NLP/AI journals and conferences such as ICML, ACL, EMNLP, ICLR, and TACL. 
 He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member of ACL, EMNLP, NAACL, AAAI, and IJCAI.</p>
 
@@ -94,16 +94,16 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
 <h3>Long Reasoning Models (LRMs)</h3>
 <ul>
     <li type="circle">Xingyu Chen, Jiahao Xu, Tian Liang, Zhiwei He, Jianhui Pang, Dian Yu, Linfeng Song, Qiuzhi Liu, Mengfei Zhou, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2412.21187"><font color="#0080FF">Do NOT Think That Much for 2+3=? On the Overthinking of o1-Like LLMs</font></a>. <i>ICML 2025</i>. <a href="https://x.com/tuzhaopeng/status/1873924882012291463">X</a></li>
-    <li type="circle">Yue Wang, Qiuzhi Liu, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Linfeng Song, Dian Yu, Juntao Li, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2501.18585"><font color="#0080FF">Thoughts Are All Over the Place: On the Underthinking of o1-Like LLMs</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1885179412163027406">X</a></li>
+    <li type="circle">Yue Wang, Qiuzhi Liu, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Linfeng Song, Dian Yu, Juntao Li, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2501.18585"><font color="#0080FF">Thoughts Are All Over the Place: On the Underthinking of o1-Like LLMs</font></a>. <i>NeurIPS 2025</i> (Spotlight, 3.2%). <a href="https://x.com/tuzhaopeng/status/1885179412163027406">X</a></li>
     <li type="circle">Zhiwei He, Tian Liang, Jiahao Xu, Qiuzhi Liu, Xingyu Chen, Yue Wang, Linfeng Song, Dian Yu, Zhenwen Liang, Wenxuan Wang, Zhuosheng Zhang, Rui Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2504.11456"><font color="#0080FF">DeepMath-103K: A Large-Scale, Challenging, Decontaminated, and Verifiable Mathematical Dataset for Advancing Reasoning</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1912057561110782446">X</a></li>	
 
 	<li type="circle">Zicheng Lin, Tian Liang, Jiahao Xu, Qiuzhi Liu, Xing Wang, Ruilin Luo, Chufan Shi, Siheng Li, Yujiu Yang, and <u>Zhaopeng Tu</u>*. <a href="https://arxiv.org/abs/2411.19943"><font color="#0080FF">Critical Tokens Matter: Token-Level Contrastive Estimation Enhances LLM's Reasoning Capability</font></a>. <i>ICML 2025</i>. <a href="https://x.com/tuzhaopeng/status/1879065390992753149">X</a></li>
     <li type="circle">Ante Wang, Linfeng Song, Ye Tian, Dian Yu, Haitao Mi, Xiangyu Duan, <u>Zhaopeng Tu</u>*, Jinsong Su, and Dong Yu. <a href="https://arxiv.org/abs/2502.11183"><font color="#0080FF">Don't Get Lost in the Trees: Streamlining LLM Reasoning by Overcoming Tree Search Exploration Pitfalls</font></a>. <i>ACL 2025</i>. <a href="https://x.com/tuzhaopeng/status/1891346931433255300">X</a></li>
 
-    <li type="circle">Xiaoyuan Liu, Tian Liang, Zhiwei He, Jiahao Xu, Wenxuan Wang, Pinjia He, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2505.13445"><font color="#0080FF">Trust, But Verify: A Self-Verification Approach to Reinforcement Learning with Verifiable Rewards</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1924838749676175617">X</a></li>
-    <li type="circle">Mengru Wang, Xingyu Chen, Yue Wang, Zhiwei He, Jiahao Xu, Tian Liang, Qiuzhi Liu, Yunzhi Yao, Wenxuan Wang, Ruotian Ma, Haitao Mi, Ningyu Zhang, <u>Zhaopeng Tu</u>*, Xiaolong Li, and Dong Yu. <a href="https://arxiv.org/abs/2505.14681"><font color="#0080FF">Two Experts Are All You Need for Steering Thinking: Reinforcing Cognitive Effort in MoE Reasoning Models Without Additional Training</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1925198471923138891">X</a></li>
+    <li type="circle">Xiaoyuan Liu, Tian Liang, Zhiwei He, Jiahao Xu, Wenxuan Wang, Pinjia He, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2505.13445"><font color="#0080FF">Trust, But Verify: A Self-Verification Approach to Reinforcement Learning with Verifiable Rewards</font></a>. <i>NeurIPS 2025</i>. <a href="https://x.com/tuzhaopeng/status/1924838749676175617">X</a></li>
+    <li type="circle">Mengru Wang, Xingyu Chen, Yue Wang, Zhiwei He, Jiahao Xu, Tian Liang, Qiuzhi Liu, Yunzhi Yao, Wenxuan Wang, Ruotian Ma, Haitao Mi, Ningyu Zhang, <u>Zhaopeng Tu</u>*, Xiaolong Li, and Dong Yu. <a href="https://arxiv.org/abs/2505.14681"><font color="#0080FF">Two Experts Are All You Need for Steering Thinking: Reinforcing Cognitive Effort in MoE Reasoning Models Without Additional Training</font></a>. <i>NeurIPS 2025</i>. <a href="https://x.com/tuzhaopeng/status/1925198471923138891">X</a></li>
 
-    <li type="circle">Ke Ji, Jiahao Xu, Tian Liang, Qiuzhi Liu, Zhiwei He, Xingyu Chen, Xiaoyuan Liu, Zhijie Wang, Junying Chen, Benyou Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="http://dx.doi.org/10.13140/RG.2.2.33772.07043"><font color="#0080FF">The First Few Tokens Are All You Need: An Efficient and Effective Unsupervised Prefix Fine-Tuning Method for Reasoning Models</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1895420224683516413">X</a></li>
+    <li type="circle">Ke Ji, Jiahao Xu, Tian Liang, Qiuzhi Liu, Zhiwei He, Xingyu Chen, Xiaoyuan Liu, Zhijie Wang, Junying Chen, Benyou Wang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="http://dx.doi.org/10.13140/RG.2.2.33772.07043"><font color="#0080FF">The First Few Tokens Are All You Need: An Efficient and Effective Unsupervised Prefix Fine-Tuning Method for Reasoning Models</font></a>. <i>NeurIPS 2025</i>. <a href="https://x.com/tuzhaopeng/status/1895420224683516413">X</a></li>
     <li type="circle">Yansi Li, Jiahao Xu, Tian Liang, Xingyu Chen, Zhiwei He, Qiuzhi Liu, Rui Wang, Zhuosheng Zhang, <u>Zhaopeng Tu</u>*, Haitao Mi, and Dong Yu. <a href="https://arxiv.org/abs/2503.17363"><font color="#0080FF">Dancing with Critiques: Enhancing LLM Reasoning with Stepwise Natural Language Self-Critique</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1900823893809791007">X</a></li>	
     <li type="circle">Yi Su, Dian Yu, Linfeng Song, Juntao Li, Haitao Mi, Zhaopeng Tu, Min Zhang, and Dong Yu. <a href="https://arxiv.org/abs/2503.23829"><font color="#0080FF">Crossing the Reward Bridge: Expanding RL with Verifiable Rewards Across Diverse Domains</font></a>. <i>Preprint</i>. <a href="https://x.com/tuzhaopeng/status/1906975869538914570">X</a></li>	
 </ul>
