--- a/publications.html
+++ b/publications.html
@@ -27,17 +27,6 @@ table {
 </head>
 <body>
 
-
-
-<!-- img border="0" height="276.3" width="337.5" src="images/zptu.jpg">
-
-<h2><b>Zhaopeng Tu</b></h2>
-<p align="left">
-<b>Principal Researcher</b><br/>
-Hunyuan AI Digital Human, Tencent<br />
-tuzhaopeng@gmail.com
-</p -->
-
 <table class="wsite-multicol-table">
 <tbody class="wsite-multicol-tbody">
 <tr class="wsite-multicol-tr">
@@ -49,8 +38,8 @@ tuzhaopeng@gmail.com
     <br/>
     <h2>Zhaopeng Tu</h2>
 
-    <p>Principal Researcher<br />
-    Hunyuan AI Digital Human, Tencent<br />
+    <p>Tech Lead<br />
+    Digital Human Center, Tencent Multimodal Department<br />
     tuzhaopeng@gmail.com</p>
 </td>
 
@@ -60,7 +49,7 @@ tuzhaopeng@gmail.com
 
 
 <h2>Bio</h2>
-<p>Zhaopeng Tu is a principal researcher at Tencent, whose research focuses on large language models.
+<p>Zhaopeng Tu is the Tech Lead of Digital Human Center at Tencent, whose research focuses on agents and large language models.
 He has published over 100 papers in leading NLP/AI journals and conferences such as ICML, ACL, EMNLP, ICLR, and TACL. 
 He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member of ACL, EMNLP, NAACL, AAAI, and IJCAI.</p>
 
