--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@ He served as Associate Editor of NeuroComputing, Area Chair or Senior PC Member 
   <li type="circle">2025-05: 2 papers were accepted to ICML2025.</li>        
   <li type="circle">2025-01: 3 papers were accepted to ICLR2025.</li>        
   <li type="circle">2024-10: Our paper titled "<i>GPT4Video: A Unified Multimodal Large Language Model for lnstruction-Followed Understanding and Safety-Aware Generation</i>" was <font color="#C4260B"><b>nominated for the Best Paper Award</b></font> at ACM MM 2024.</li>        
-  <li type="circle">2024-09: 3 papers (including 2 D&B Papers) were accepted to NeurIPS2024, and 1 paper was accepted to EMNLP2024.</li>        
-  <li type="circle">2024-05: 1 paper was accepted to ICML2024, and 6 papers were accepted to ACL2024.</li>    
+  <li type="circle">2024-09: 3 papers (including 2 D&B Papers) were accepted to NeurIPS2024.</li>        
+  <li type="circle">2024-09: 1 paper was accepted to EMNLP2024.</li>        
+  <li type="circle">2024-05: 1 paper was accepted to ICML2024.</li>
+  <li type="circle">2024-05: 6 papers were accepted to ACL2024.</li>    
   <li type="circle">2022-11: Our paper titled "<i>Adapters for Enhanced Modeling of Multilingual Knowledge and Text</i>" was selected as the <font color="#C4260B"><b>Best Paper Award</b></font> at MRL Workshop in EMNLP2022.</li>
 </ul>
 
